[tool.poetry]
name = "vision-test"
version = "0.1.0"
description = ""
authors = ["Binh Nguyen <b.nguyen.sn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
opencv-python = "4.8.0.76"
ffmpeg-python = "0.2.0"
numpy = "1.25.2"
future = "0.18.3"
flask = "3.0.3"
gunicorn = "22.0.0"
werkzeug = "3.0.3"

[tool.poetry.scripts]
run-vision-test = "runner:main"
cv-playground = "cv_playground:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
